--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shabas-qmm",
   "version": "0.1.0",
   "private": true,
+  "license": "UNLICENSED",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -10,6 +11,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.13",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.20.2",
@@ -21,6 +26,7 @@
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.59.3",
     "superjson": "1.9.1",
     "zod": "^3.20.6"
   },
