Added formik and validation to forms

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "sass": "^1.59.3",
     "superjson": "1.9.1",
+    "yup": "^1.1.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
